--- a/pflanzenbewaesserung/templates/default.html
+++ b/pflanzenbewaesserung/templates/default.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html lang="en">
- 
+<!--Default Template, welches die wichtigsten Skripte wie Bootstrap einbindet-->
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -25,6 +25,7 @@
     </head>
  
     <body>
+        <!--Bootstrap und Socket_io Skript einbinden-->
         <script src="
         https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
