--- a/pflanzenbewaesserung/templates/messdaten_hinzufuegen.html
+++ b/pflanzenbewaesserung/templates/messdaten_hinzufuegen.html
@@ -1,10 +1,11 @@
-{% extends "default.html" %}
+{% extends "default.html" %} <!--erweiter Default Layout-->
 
 {% block header %}
     <title>{{ name }} - Messdaten hinzufügen</title>
 {% endblock %}
 
 {% block content %}
+<!--Formular erstellen zum Hinzufügen neuer Messdaten in die Datenbank-->
 <div class="container mt-5">
         <h1 class="text-center mb-4">Neue Messdaten hinzufügen</h1>
         
